<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_background"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/design_default_color_primary_dark"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/card_custom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="300dp"
            android:background="@color/dark_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_image"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toTopOf="@+id/card_custom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/card_custom"
            tools:background="@color/white">

            <ImageView
                android:id="@+id/image_poster_xl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_show_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:fontFamily="@font/work_sans_medium"
            android:maxLines="3"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_image"
            app:layout_constraintTop_toTopOf="@+id/card_custom"
            tools:text="Alief Azies : The Last Firebender" />

        <TextView
            android:id="@+id/tv_show_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:fontFamily="@font/work_sans"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_image"
            app:layout_constraintTop_toBottomOf="@id/tv_show_direct"
            tools:text="Action, Drama, Sci-fi" />

        <TextView
            android:id="@+id/tv_show_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:fontFamily="@font/work_sans"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_image"
            app:layout_constraintTop_toBottomOf="@id/tv_show_genre"
            tools:text="2042" />

        <TextView
            android:id="@+id/directed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:fontFamily="@font/work_sans"
            android:text="@string/director"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/card_image"
            app:layout_constraintTop_toBottomOf="@id/tv_show_title" />

        <TextView
            android:id="@+id/tv_show_direct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:fontFamily="@font/work_sans"
            android:maxLines="3"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/directed"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/directed"
            app:layout_constraintTop_toBottomOf="@id/tv_show_title"
            app:layout_constraintBottom_toTopOf="@id/tv_show_genre"
            tools:text="Alief Azies" />

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/synopsis"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_show_date" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="8dp"
            android:background="@color/light_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/synopsis" />

        <TextView
            android:id="@+id/tv_show_desc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/work_sans"
            android:text="@string/lorem"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>