<resources>
    <string name="app_name">TVMovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="genre">Genre:</string>
    <string name="synopsis">Synopsis</string>
    <string name="movie">MOVIE</string>
    <string name="TV_SHOW">TV SHOW</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="director">Director:</string>
</resources>